HelloUltraviolet/Fixtures/RejectedSource/Statements/ReturnUnitMismatch/Expected.uv
//! Expected diagnostic metadata for the ReturnUnitMismatch rejected-source specimen.

expectedDiagnostic("E-SEM-3161", "rule.18.Return-Unit-Err")
